# workflow

./: CMakeLists.txt  README.md  harpocrates.cpp
.github/workflow/: platform.yml
.github/workflows/: android.yml  catch.yml  clang.yml  container.yml  cron_job.yml  cronjob.yml  gcc.yml  image.yml  manual.yml  matrix.yml  package.yml  platform.yml  self-hosted.yml  tag.yml  timer.yml  transfer.yml  windows.yml
